// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateBlogDocumentsTypes (formatted) > should match snapshot 1`] = `
"// AUTOGENERATED: Don't edit this file!
const FAKE_EMPTY_BLOG_DOCUMENTS_TYPES = {} as const;
export default FAKE_EMPTY_BLOG_DOCUMENTS_TYPES;
"
`;

exports[`generateBlogDocumentsTypes (formatted) > should match snapshot 2`] = `
"// AUTOGENERATED: Don't edit this file!
const FAKE_BLOG_DOCUMENTS_TYPES = {
  "FakeCategoryOnePost": {
    "categoryFolder": "fake-category-one"
  },
  "FakeCategoryThreePost": {
    "categoryFolder": "fake-category-three"
  },
  "FakeEmptySubcategoriesNestedInCategoryPost": {
    "categoryFolder": "fake-empty-subcategories-nested-in-category"
  },
  "FakeCategoryTwoPost": {
    "categoryFolder": "fake-category-two"
  },
  "FakeEmptyCategoryPost": {
    "categoryFolder": "fake-empty-category"
  }
} as const;
export default FAKE_BLOG_DOCUMENTS_TYPES;
"
`;

exports[`generateBlogDocumentsTypes (ugly) > should match snapshot 1`] = `
"// AUTOGENERATED: Don't edit this file!
const FAKE_EMPTY_BLOG_DOCUMENTS_TYPES = {} as const;
export default FAKE_EMPTY_BLOG_DOCUMENTS_TYPES;"
`;

exports[`generateBlogDocumentsTypes (ugly) > should match snapshot 2`] = `
"// AUTOGENERATED: Don't edit this file!
const FAKE_BLOG_DOCUMENTS_TYPES = {"FakeCategoryOnePost":{"categoryFolder":"fake-category-one"},"FakeCategoryThreePost":{"categoryFolder":"fake-category-three"},"FakeEmptySubcategoriesNestedInCategoryPost":{"categoryFolder":"fake-empty-subcategories-nested-in-category"},"FakeCategoryTwoPost":{"categoryFolder":"fake-category-two"},"FakeEmptyCategoryPost":{"categoryFolder":"fake-empty-category"}} as const;
export default FAKE_BLOG_DOCUMENTS_TYPES;"
`;
